Stopped text wrapping

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -44,6 +44,8 @@
                 flex: 2;
                 max-width: 70%;
                 overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
 
                 .infoWrap {
                     display: flex;
